--- a/Platin_WebAPI/Web.config
+++ b/Platin_WebAPI/Web.config
@@ -5,6 +5,11 @@
   -->
 <configuration>
   <appSettings></appSettings>
+  <connectionStrings>
+    <!--<add name="PlatinConnection" connectionString="Data Source=DESKTOP-FPO3B1O\SQLEXPRESS;Initial Catalog=ProjectDataBase;Integrated Security=True" providerName="System.Data.SqlClient" />-->
+    <!--<add name="ProjectConnection2" connectionString="Data Source=PAULO_OKINO;Initial Catalog=DB_QueroTrocar;Integrated Security=True" providerName="System.Data.SqlClient" />-->
+    <!--<add name="ProjectMVCContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=ProjectMVCContext-20170408194114; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|ProjectMVCContext-20170408194114.mdf" providerName="System.Data.SqlClient" />-->
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.1" />
     <httpRuntime targetFramework="4.5.1" />
