--- a/Platin_WebAPI/Web.config
+++ b/Platin_WebAPI/Web.config
@@ -6,9 +6,7 @@
 <configuration>
   <appSettings></appSettings>
   <connectionStrings>
-    <!--<add name="PlatinConnection" connectionString="Data Source=DESKTOP-FPO3B1O\SQLEXPRESS;Initial Catalog=ProjectDataBase;Integrated Security=True" providerName="System.Data.SqlClient" />-->
-    <!--<add name="ProjectConnection2" connectionString="Data Source=PAULO_OKINO;Initial Catalog=DB_QueroTrocar;Integrated Security=True" providerName="System.Data.SqlClient" />-->
-    <!--<add name="ProjectMVCContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=ProjectMVCContext-20170408194114; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|ProjectMVCContext-20170408194114.mdf" providerName="System.Data.SqlClient" />-->
+    <add name="PlatinConnection" connectionString="Persist Security Info=False;User ID=DB_A2EE18_portal_admin; pwd=4rtr4x2308; Initial Catalog=DB_A2EE18_portal;Data Source=sql7003.site4now.net" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.1" />
