--- a/Platin.Domain/Platin.Domain.csproj
+++ b/Platin.Domain/Platin.Domain.csproj
@@ -42,9 +42,12 @@
   <ItemGroup>
     <Compile Include="Entities\EntityBase.cs" />
     <Compile Include="Entities\Product.cs" />
+    <Compile Include="Interfaces\Repositories\IProductRepository.cs" />
     <Compile Include="Interfaces\Repositories\IRepositoryBase.cs" />
+    <Compile Include="Interfaces\Services\IProductService.cs" />
     <Compile Include="Interfaces\Services\IServiceBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\ProductService.cs" />
     <Compile Include="Services\ServiceBase.cs" />
   </ItemGroup>
   <ItemGroup />
