--- a/Platin.Infra.Data/Platin.Infra.Data.csproj
+++ b/Platin.Infra.Data/Platin.Infra.Data.csproj
@@ -48,16 +48,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Context\PlatinContext.cs" />
+    <Compile Include="EntityConfig\ProductConfiguration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\ProductRepository.cs" />
     <Compile Include="Repositories\RepositoryBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="EntityConfig\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\Platin.Domain\Platin.Domain.csproj">
       <Project>{9D908C7F-7563-4DFD-B09C-6F13F520A2B3}</Project>
