--- a/Platin.Infra.CrossCutting.Helpers/Platin.Infra.CrossCutting.Helpers.csproj
+++ b/Platin.Infra.CrossCutting.Helpers/Platin.Infra.CrossCutting.Helpers.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Platin.Infra.CrossCutting.Helpers</RootNamespace>
     <AssemblyName>Platin.Infra.CrossCutting.Helpers</AssemblyName>
-    <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
