--- a/Platin_WebAPI/packages.config
+++ b/Platin_WebAPI/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoMapper" version="3.2.1" targetFramework="net451" />
+  <package id="EntityFramework" version="6.2.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net451" />
@@ -7,4 +9,6 @@
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.8" targetFramework="net451" />
   <package id="Microsoft.Net.Compilers" version="2.6.1" targetFramework="net451" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="11.0.1-beta1" targetFramework="net451" />
+  <package id="SimpleInjector" version="4.0.12" targetFramework="net452" />
+  <package id="SimpleInjector.Integration.WebApi" version="4.0.12" targetFramework="net452" />
 </packages>
