--- a/Platin_WebAPI/packages.config
+++ b/Platin_WebAPI/packages.config
@@ -9,6 +9,9 @@
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.8" targetFramework="net451" />
   <package id="Microsoft.Net.Compilers" version="2.6.1" targetFramework="net451" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="11.0.1-beta1" targetFramework="net451" />
+  <package id="Npgsql" version="2.2.7" targetFramework="net452" />
+  <package id="Npgsql.EntityFramework" version="2.2.7" targetFramework="net452" />
   <package id="SimpleInjector" version="4.0.12" targetFramework="net452" />
   <package id="SimpleInjector.Integration.WebApi" version="4.0.12" targetFramework="net452" />
+  <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="net452" />
 </packages>
