--- a/Platin_WebAPI/Web.config
+++ b/Platin_WebAPI/Web.config
@@ -5,12 +5,14 @@
   -->
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <appSettings />
   <connectionStrings>
     <add name="PlatinConnection" connectionString="Persist Security Info=False;User ID=DB_A2EE18_portal_admin; pwd=4rtr4x2308; Initial Catalog=DB_A2EE18_portal;Data Source=sql7003.site4now.net" providerName="System.Data.SqlClient" />
+    <!--<add name="PlatinPostgreSQLConnection" connectionString="Server=201.6.100.80;Port=5432;Database=SIM_LIDER20170511;User Id=postgres;Password=platinsiad;"  providerName="Npgsql" />-->
+    <add name="PlatinPostgreSQLConnection" connectionString="server=201.6.100.80;Port=5432;user id=postgres;password=platinsiad;database=SIM_LIDER20170511" providerName="Npgsql" />
   </connectionStrings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
@@ -66,6 +68,7 @@
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+      <provider invariantName="Npgsql" type="Npgsql.NpgsqlServices, Npgsql.EntityFramework" />
     </providers>
   </entityFramework>
 </configuration>
