--- a/Platin_WebAPI/Web.config
+++ b/Platin_WebAPI/Web.config
@@ -12,7 +12,7 @@
   <connectionStrings>
     <add name="PlatinConnection" connectionString="Persist Security Info=False;User ID=DB_A2EE18_portal_admin; pwd=4rtr4x2308; Initial Catalog=DB_A2EE18_portal;Data Source=sql7003.site4now.net" providerName="System.Data.SqlClient" />
     <!--<add name="PlatinPostgreSQLConnection" connectionString="Server=201.6.100.80;Port=5432;Database=SIM_LIDER20170511;User Id=postgres;Password=platinsiad;"  providerName="Npgsql" />-->
-    <add name="PlatinPostgreSQLConnection" connectionString="server=201.6.100.80;Port=5432;user id=postgres;password=platinsiad;database=SIM_LIDER20170511" providerName="Npgsql" />
+    <add name="PlatinPostgreSQLConnection" connectionString="server=201.6.100.80;Port=5432;user id=postgres;password=platinsiad;database=SIM_LIDER20170511;" providerName="Npgsql" />
   </connectionStrings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
