--- a/Platin.Domain/Platin.Domain.csproj
+++ b/Platin.Domain/Platin.Domain.csproj
@@ -42,22 +42,64 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entities\ClsCab.cs" />
+    <Compile Include="Entities\CpmCab.cs" />
+    <Compile Include="Entities\CpmCabLotCxaFunCabCpmFec.cs" />
+    <Compile Include="Entities\CpmCabPrdCabCpmIte.cs" />
+    <Compile Include="Entities\CpmFec.cs" />
+    <Compile Include="Entities\CpmIte.cs" />
+    <Compile Include="Entities\CpmIteCpmCab.cs" />
     <Compile Include="Entities\EntityBase.cs" />
+    <Compile Include="Entities\FunCab.cs" />
+    <Compile Include="Entities\LotCxa.cs" />
+    <Compile Include="Entities\LotCxaVFunUadCab.cs" />
+    <Compile Include="Entities\PrdBar.cs" />
     <Compile Include="Entities\PrdCab.cs" />
+    <Compile Include="Entities\PrdCabPrdBarCpmIte.cs" />
     <Compile Include="Entities\Product.cs" />
+    <Compile Include="Entities\UsuSis.cs" />
+    <Compile Include="Entities\VFunUadCab.cs" />
+    <Compile Include="Entities\VFunUadCabUsuSis.cs" />
+    <Compile Include="Interfaces\Repositories\ICpmFecRepository.cs" />
+    <Compile Include="Interfaces\Repositories\IClsCabRepository.cs" />
+    <Compile Include="Interfaces\Repositories\ICpmCabRepository.cs" />
+    <Compile Include="Interfaces\Repositories\ICpmIteRepository.cs" />
+    <Compile Include="Interfaces\Repositories\IFunCabRepository.cs" />
+    <Compile Include="Interfaces\Repositories\ILotCxaRepository.cs" />
     <Compile Include="Interfaces\Repositories\IPostgreSQLRepositoryBase.cs" />
+    <Compile Include="Interfaces\Repositories\IPrdBarRepository.cs" />
     <Compile Include="Interfaces\Repositories\IPrdCabRepository.cs" />
     <Compile Include="Interfaces\Repositories\IProductRepository.cs" />
     <Compile Include="Interfaces\Repositories\IRepositoryBase.cs" />
+    <Compile Include="Interfaces\Repositories\IUsuSisRepository.cs" />
+    <Compile Include="Interfaces\Repositories\IVFunUadCabRepository.cs" />
+    <Compile Include="Interfaces\Services\IClsCabService.cs" />
+    <Compile Include="Interfaces\Services\ICpmCabService.cs" />
+    <Compile Include="Interfaces\Services\ICpmFecService.cs" />
+    <Compile Include="Interfaces\Services\ICpmIteService.cs" />
+    <Compile Include="Interfaces\Services\IFunCabService.cs" />
+    <Compile Include="Interfaces\Services\ILotCxaService.cs" />
     <Compile Include="Interfaces\Services\IPostgreSQLServiceBase.cs" />
+    <Compile Include="Interfaces\Services\IPrdBarService.cs" />
     <Compile Include="Interfaces\Services\IPrdCabService.cs" />
     <Compile Include="Interfaces\Services\IProductService.cs" />
     <Compile Include="Interfaces\Services\IServiceBase.cs" />
+    <Compile Include="Interfaces\Services\IUsuSisService.cs" />
+    <Compile Include="Interfaces\Services\IVFunUadCabService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\ClsCabService.cs" />
+    <Compile Include="Services\CpmCabService.cs" />
+    <Compile Include="Services\CpmFecService.cs" />
+    <Compile Include="Services\CpmIteService.cs" />
+    <Compile Include="Services\FunCabService.cs" />
+    <Compile Include="Services\LotCxaService.cs" />
     <Compile Include="Services\PostgreSQLServiceBase.cs" />
+    <Compile Include="Services\PrdBarService.cs" />
     <Compile Include="Services\PrdCabService.cs" />
     <Compile Include="Services\ProductService.cs" />
     <Compile Include="Services\ServiceBase.cs" />
+    <Compile Include="Services\UsuSisService.cs" />
+    <Compile Include="Services\VFunUadCabService.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
