--- a/Platin_WebAPI/Platin.WebAPI.csproj
+++ b/Platin_WebAPI/Platin.WebAPI.csproj
@@ -123,9 +123,11 @@
     <Compile Include="AutoMapper\AutoMapperConfig.cs" />
     <Compile Include="AutoMapper\DomainToViewModelMappingProfile.cs" />
     <Compile Include="AutoMapper\ViewModelToDomainMappingProfile.cs" />
+    <Compile Include="Controllers\PDVController.cs" />
     <Compile Include="Controllers\PrdCabController.cs" />
     <Compile Include="Controllers\ProductController.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
+    <Compile Include="Controllers\VFunUadCabController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
