--- a/Platin_WebAPI/packages.config
+++ b/Platin_WebAPI/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="AutoMapper" version="3.2.1" targetFramework="net451" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net452" />
+  <package id="EntityFramework6.Npgsql" version="3.1.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net451" />
@@ -9,8 +10,7 @@
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.8" targetFramework="net451" />
   <package id="Microsoft.Net.Compilers" version="2.6.1" targetFramework="net451" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="11.0.1-beta1" targetFramework="net451" />
-  <package id="Npgsql" version="2.2.7" targetFramework="net452" />
-  <package id="Npgsql.EntityFramework" version="2.2.7" targetFramework="net452" />
+  <package id="Npgsql" version="3.1.0" targetFramework="net452" />
   <package id="SimpleInjector" version="4.0.12" targetFramework="net452" />
   <package id="SimpleInjector.Integration.WebApi" version="4.0.12" targetFramework="net452" />
   <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="net452" />
