--- a/Platin.Domain/Platin.Domain.csproj
+++ b/Platin.Domain/Platin.Domain.csproj
@@ -42,6 +42,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entities\Caixa.cs" />
+    <Compile Include="Entities\Categoria.cs" />
     <Compile Include="Entities\ClsCab.cs" />
     <Compile Include="Entities\CpmCab.cs" />
     <Compile Include="Entities\CpmCabLotCxaFunCabCpmFec.cs" />
@@ -49,56 +51,82 @@
     <Compile Include="Entities\CpmFec.cs" />
     <Compile Include="Entities\CpmIte.cs" />
     <Compile Include="Entities\CpmIteCpmCab.cs" />
+    <Compile Include="Entities\Cupom.cs" />
     <Compile Include="Entities\EntityBase.cs" />
     <Compile Include="Entities\FunCab.cs" />
+    <Compile Include="Entities\Funcionario.cs" />
+    <Compile Include="Entities\ItemVenda.cs" />
     <Compile Include="Entities\LotCxa.cs" />
     <Compile Include="Entities\LotCxaVFunUadCab.cs" />
     <Compile Include="Entities\PrdBar.cs" />
     <Compile Include="Entities\PrdCab.cs" />
     <Compile Include="Entities\PrdCabPrdBarCpmIte.cs" />
     <Compile Include="Entities\Product.cs" />
+    <Compile Include="Entities\Produto.cs" />
     <Compile Include="Entities\UsuSis.cs" />
+    <Compile Include="Entities\Venda.cs" />
     <Compile Include="Entities\VFunUadCab.cs" />
     <Compile Include="Entities\VFunUadCabUsuSis.cs" />
+    <Compile Include="Interfaces\Repositories\ICaixaRepository.cs" />
+    <Compile Include="Interfaces\Repositories\ICategoriaRepository.cs" />
     <Compile Include="Interfaces\Repositories\ICpmFecRepository.cs" />
     <Compile Include="Interfaces\Repositories\IClsCabRepository.cs" />
     <Compile Include="Interfaces\Repositories\ICpmCabRepository.cs" />
     <Compile Include="Interfaces\Repositories\ICpmIteRepository.cs" />
+    <Compile Include="Interfaces\Repositories\ICupomRepository.cs" />
     <Compile Include="Interfaces\Repositories\IFunCabRepository.cs" />
+    <Compile Include="Interfaces\Repositories\IFuncionarioRepository.cs" />
+    <Compile Include="Interfaces\Repositories\IItemVendaRepository.cs" />
     <Compile Include="Interfaces\Repositories\ILotCxaRepository.cs" />
     <Compile Include="Interfaces\Repositories\IPostgreSQLRepositoryBase.cs" />
     <Compile Include="Interfaces\Repositories\IPrdBarRepository.cs" />
     <Compile Include="Interfaces\Repositories\IPrdCabRepository.cs" />
     <Compile Include="Interfaces\Repositories\IProductRepository.cs" />
+    <Compile Include="Interfaces\Repositories\IProdutoRepository.cs" />
     <Compile Include="Interfaces\Repositories\IRepositoryBase.cs" />
     <Compile Include="Interfaces\Repositories\IUsuSisRepository.cs" />
+    <Compile Include="Interfaces\Repositories\IVendaRepository.cs" />
     <Compile Include="Interfaces\Repositories\IVFunUadCabRepository.cs" />
+    <Compile Include="Interfaces\Services\ICaixaService.cs" />
+    <Compile Include="Interfaces\Services\ICategoriaService.cs" />
     <Compile Include="Interfaces\Services\IClsCabService.cs" />
     <Compile Include="Interfaces\Services\ICpmCabService.cs" />
     <Compile Include="Interfaces\Services\ICpmFecService.cs" />
     <Compile Include="Interfaces\Services\ICpmIteService.cs" />
+    <Compile Include="Interfaces\Services\ICupomService.cs" />
     <Compile Include="Interfaces\Services\IFunCabService.cs" />
+    <Compile Include="Interfaces\Services\IFuncionarioService.cs" />
+    <Compile Include="Interfaces\Services\IItemVendaService.cs" />
     <Compile Include="Interfaces\Services\ILotCxaService.cs" />
     <Compile Include="Interfaces\Services\IPostgreSQLServiceBase.cs" />
     <Compile Include="Interfaces\Services\IPrdBarService.cs" />
     <Compile Include="Interfaces\Services\IPrdCabService.cs" />
     <Compile Include="Interfaces\Services\IProductService.cs" />
+    <Compile Include="Interfaces\Services\IProdutoService.cs" />
     <Compile Include="Interfaces\Services\IServiceBase.cs" />
     <Compile Include="Interfaces\Services\IUsuSisService.cs" />
+    <Compile Include="Interfaces\Services\IVendaService.cs" />
     <Compile Include="Interfaces\Services\IVFunUadCabService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\CaixaService.cs" />
+    <Compile Include="Services\CategoriaService.cs" />
     <Compile Include="Services\ClsCabService.cs" />
     <Compile Include="Services\CpmCabService.cs" />
     <Compile Include="Services\CpmFecService.cs" />
     <Compile Include="Services\CpmIteService.cs" />
+    <Compile Include="Services\CupomService.cs" />
     <Compile Include="Services\FunCabService.cs" />
+    <Compile Include="Services\FuncionarioService.cs" />
+    <Compile Include="Services\ItemVendaService.cs" />
     <Compile Include="Services\LotCxaService.cs" />
     <Compile Include="Services\PostgreSQLServiceBase.cs" />
     <Compile Include="Services\PrdBarService.cs" />
     <Compile Include="Services\PrdCabService.cs" />
     <Compile Include="Services\ProductService.cs" />
+    <Compile Include="Services\ProdutoService.cs" />
     <Compile Include="Services\ServiceBase.cs" />
     <Compile Include="Services\UsuSisService.cs" />
+    <Compile Include="Services\VendaService.cs" />
     <Compile Include="Services\VFunUadCabService.cs" />
   </ItemGroup>
   <ItemGroup />
